--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <!--Team section-->
 
       <section class="team-section section">
-        <div class="container">
+        <div class="team-container container">
           <h2 class="our-team title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -446,9 +446,8 @@
               <use href="./images/sprite.svg#icon-linkedin-fot"></use>
             </svg>
           </a>
-        </li>
+         </li>
         </ul>
-      
        </div>
       </div>
     </footer>
