--- a/portfolio.html
+++ b/portfolio.html
@@ -222,7 +222,8 @@
     <!-- Footer section -->
 
     <footer class="footer-section">
-     <div class="container">
+    <div class="footer-container container">
+     <div class="footer-logo-container">
       <a class="logo-link link" href="./index.html"
         >Web<span class="accent-footer">Studio</span></a
       >
@@ -230,7 +231,41 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </div>
+      </div>
+      <div class="social-footer">
+        <p class="social-text">Social media</p>
+        <ul class="social-footer-list list">
+        <li class="social-footer-list-item">
+          <a href="" class="social-footer-list-link">
+            <svg class="social-footer-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-instagram-fot"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-footer-list-item">
+          <a href="" class="social-footer-list-link">
+            <svg class="social-footer-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-twitter-fot"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-footer-list-item">
+          <a href="" class="social-footer-list-link">
+            <svg class="social-footer-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-facebook-fot"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-footer-list-item">
+          <a href="" class="social-footer-list-link">
+            <svg class="social-footer-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-linkedin-fot"></use>
+            </svg>
+          </a>
+         </li>
+        </ul>
+       </div>
+     </div>
     </footer>
   </body>
 </html>
