--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="flex-container">
               <div class="icon-container">
                 <svg class="about-icon-list" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="about-title">Strategy</h3>
@@ -87,7 +87,7 @@
             <li class="flex-container">
               <div class="icon-container">
                 <svg class="punctuality-icon-list" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="about-title">Punctuality</h3>
@@ -100,7 +100,7 @@
             <li class="flex-container">
               <div class="icon-container">
                 <svg class="diligence-icon-list" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="about-title">Diligence</h3>
@@ -113,7 +113,7 @@
             <li class="flex-container">
               <div class="icon-container">
                 <svg class="technologies-icon-list" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="about-title">Technologies</h3>
@@ -186,28 +186,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,28 +230,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,28 +274,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -318,28 +318,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -359,42 +359,42 @@
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo1"></use>
+                  <use href="./images/icons.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo2"></use>
+                  <use href="./images/icons.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li> 
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo3"></use>
+                  <use href="./images/icons.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo4"></use>
+                  <use href="./images/icons.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo5"></use>
+                  <use href="./images/icons.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-list-link">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo6"></use>
+                  <use href="./images/icons.svg#icon-logo6"></use>
                 </svg>
               </a>
             </li>
@@ -422,28 +422,28 @@
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-instagram-fot"></use>
+              <use href="./images/icons.svg#icon-instagram-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-twitter-fot"></use>
+              <use href="./images/icons.svg#icon-twitter-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-facebook-fot"></use>
+              <use href="./images/icons.svg#icon-facebook-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-linkedin-fot"></use>
+              <use href="./images/icons.svg#icon-linkedin-fot"></use>
             </svg>
           </a>
          </li>
