--- a/portfolio.html
+++ b/portfolio.html
@@ -238,28 +238,28 @@
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-instagram-fot"></use>
+              <use href="./images/icons.svg#icon-instagram-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-twitter-fot"></use>
+              <use href="./images/icons.svg#icon-twitter-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-facebook-fot"></use>
+              <use href="./images/icons.svg#icon-facebook-fot"></use>
             </svg>
           </a>
         </li>
         <li class="social-footer-list-item">
           <a href="" class="social-footer-list-link">
             <svg class="social-footer-list-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-linkedin-fot"></use>
+              <use href="./images/icons.svg#icon-linkedin-fot"></use>
             </svg>
           </a>
          </li>
