--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <!--Hero section-->
 
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="menu-button" type="button">Order Service</button>
